# vrust-open-source

./: .gitignore  Cargo.toml  Dockerfile  README.md
SmartV_Report_Generator/: .gitignore  README.md  env.txt  report.md  run.sh  vrust.py
SmartV_Report_Generator/Sections/: Findings.py  appendix.py  disclaimer.py  errorReport.py  overview.py  summary.py
SmartV_Report_Generator/tex/: emphasis.tex  voidemphasis.tex
SmartV_Report_Generator/vrust/: 02252022_new_reporter_format.json  clearing_house_report.json  level1_report.json  mpl.json  new_reporter_metaplex.json  new_reporter_wormhole.json  vrust.json  vrust_bk.json  vrust_metaplex.json  vrust_new.json  vrust_new_2.json  vrust_wormhole.json
examples/: README.md  diff.py  run.py
examples/mango/program/: Xargo.toml
examples/metaplex-program-library/: mpl_metaplex_report.json  mpl_token_vault_report.json
examples/metaplex-program-library/auction/program/src/: entrypoint.rs
examples/metaplex-program-library/metaplex/program/src/: entrypoint.rs
examples/metaplex-program-library/nft-packs/program/src/: entrypoint.rs
examples/metaplex-program-library/token-metadata/: report.json
examples/metaplex-program-library/token-metadata/program/src/: entrypoint.rs
examples/metaplex-program-library/token-vault/program/: Xargo.toml
examples/metaplex-program-library/token-vault/program/src/: entrypoint.rs
examples/neodyme-breakpoint-workshop/: Cargo.toml
examples/quarry/programs/quarry-operator/: Xargo.toml
examples/sealevel-attacks/: Cargo.toml
examples/sealevel-attacks/programs/9-closing-accounts/insecure/src/: lib.rs
examples/solana-escrow/.git1/: config  index  packed-refs
examples/solana-escrow/.git1/refs/heads/: master
examples/solana-payment-processor/: Cargo.toml  README.md
examples/solana-payment-processor/src/: engine.rs  entrypoint.rs  error.rs  instruction.rs  lib.rs  processor.rs  state.rs  utils.rs
examples/solana-payment-processor/src/engine/: cancel_subscription.rs  common.rs  constants.rs  json.rs  pay.rs  register.rs  renew.rs  subscribe.rs  withdraw.rs
examples/solana-program-library/: Cargo.toml
examples/wormhole/solana/bridge/: Cargo.toml  bridge_report.json  bridge_report_without_macro_filter.json
examples/wormhole/solana/bridge/client/src/: main.rs
examples/wormhole/solana/bridge/cpi_poster/src/: lib.rs
examples/wormhole/solana/bridge/program/: expanded.rs
examples/wormhole/solana/migration/src/: lib.rs
src/: accounts.rs  assertions.rs  callgraph.rs  config.rs  dd.rs  main.rs  reporter.rs  source_info.rs  spl_token.rs  spl_token_v2.rs  spl_token_v3.rs  ty_confusion.rs  utils.rs  version.rs  visit.rs  wpa.rs
src/checkers/: bump_seed.rs  cross_program_invocation.rs  instruction_id.rs  is_signer_checker.rs  mod.rs  overflow.rs  owner.rs  precision.rs  staking_validator.rs
src/checkers/model/: mod.rs  solana_wrapper.rs  std_wrapper.rs
src/conf/: is_signer_var.rs
(+11 files in other folders)
