[package]
name = "vrust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
semver = "1.0.3"
cargo-lock = "7.0.1"
hashbrown = "0.11"
log = "0.4"
env_logger = "0.9"
regex = "1.5"
datafrog = "2.0.1"
either = "1.6"
itertools = "0.10.2"
petgraph = "0.6.0"
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }

[package.metadata.rust-analyzer]
rustc_private = true