[package]
name = "sol-payment-processor"
version = "0.1.0"
edition = "2018"
license = "WTFPL"
publish = false

[dependencies]
arrayref = "0.3.6"
solana-program = "=1.7.1"
thiserror = "1.0.23"
borsh = "=0.9.0"
serde = "1.0.126"
serde_json = "1.0.64"
num-traits = "0.2.14"
num-derive = "0.3.3"
spl-token = {version = "3.0.1", features = ["no-entrypoint"]}

[features]
no-entrypoint = []
test-bpf = []

[dev-dependencies]
assert_matches = "1.4.0"
solana-sdk = "=1.7.1"
solana-program-test = "=1.7.1"

[lib]
crate-type = ["cdylib", "lib"]
